--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "file-loader": "^0.9.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-router": "^3.0.2",
     "webpack": "^1.13.2"
   }
 }
