--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-materialize": "^0.18.1",
     "react-router": "^3.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   }
 }
