--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
+    "materialize-css": "^0.98.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-materialize": "^0.18.1",
