--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.11.1",
     "file-loader": "^0.9.0",
+    "firebase": "^3.6.9",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-materialize": "^0.18.1",
