--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^15.3.1",
     "react-materialize": "^0.18.1",
     "react-router": "^3.0.2",
+    "recharts": "^0.20.8",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   }
